src/objects/Section_Product_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Section Products</relationshipLabel>
        <relationshipName>Section_Product_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Product__c</fullName>
        <label>Section Product</label>
        <referenceTo>Section_Product__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Section_Product_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Section Product Contact</label>
    <nameField>
        <displayFormat>SECPROCON{000000}</displayFormat>
        <label>Section Product Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Product Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>